# neplocalgov

./: LICENSE  README.md  pyproject.toml  setup.cfg
data/: data.json
scraper/: scraper.py
src/nepal-local-levels/: main.py  tempCodeRunnerFile.py
src/neplocalgov/: __init__.py  data.csv  main.py
src/neplocalgov.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
