[metadata]
name = neplocalgov
version = 1.2.3
author = shalin-devkota
author_email = shalin.devkota01@gmail.com
description = A python package to retreive data on Nepal local government levels.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/shalin-devkota/nepal-local-levels
project_urls =
    Bug Tracker =  https://github.com/shalin-devkota/nepal-local-levels/issues
    repository = https://github.com/shalin-devkota/nepal-local-levels
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
neplocalgov = *.csv